# Mario_behaviour

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  slurm_clustering.sh  tasks.py
analysis/: changepoints.py  clustering.py
notebooks/: figure_changepoints.ipynb
output_data/: CONTENT.md
output_data/changepoints/: 01_changepoints.json  02_changepoints.json  03_changepoints.json  05_changepoints.json  06_changepoints.json
output_data/clusters/: w1l1s0_clusters.json
source_data/: CONTENT.md  mario.scenes
