[tool.setuptools.packages.find]
include = ["analysis*"]

[project]
name = "mario-behaviour-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "airoh",
    "invoke",
    "requests",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "numpy>=1.24",
    "similaritymeasures>=0.7",
    "hdbscan>=0.8",
    "scikit-learn>=1.3",
    "bayesian-changepoint-detection>=0.2.dev1",
]
